<resources>
    <string name="app_name">medprac</string>
    <string name="skip">Пропустить</string>
    <string name="analizi">Анализы</string>
    <string name="onboardtext1">Экспресс сбор и получение проб</string>
    <string name="yveds">Уведомление</string>
    <string name="onboardtext2">Вы быстро узнаете о результатах</string>
    <string name="monitoring">Мониторинг</string>
    <string name="onboardtext3">Наши врачи всегда наблюдают с вашими показателями здоровья</string>
    <string name="end">Завершить</string>
    <string name="wellcome">Добро пожаловать!</string>
    <string name="reg_txt1">Войдите, чтобы начать пользоваться функциями приложения</string>
    <string name="reg_txt2">Вход по E-mail</string>
    <string name="reg_txt_hint">example@mail.ru</string>
    <string name="next">Далее</string>
    <string name="reg_txt3">Или войдите с помощью</string>
    <string name="enter_yandex">Войти с Яндекс</string>
    <string name="email_txt1">Введите код из E-mail</string>
    <string name="code_pt1">Отправить код повторно можно будет через</string>
    <string name="code_pt2">секунд</string>
</resources>